--- a/public/css/style.css
+++ b/public/css/style.css
@@ -378,3 +378,111 @@ th{
 .btnNuevoTxtAct:hover {
     color: #AAA;
 }
+
+
+/* ------------>evidencia actividad */
+
+#containerEvidencia{
+    background-color: #f8fafcd4;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+#containerForm{
+    /* display: flex;
+    align-items: center;
+    background-color: #fff;
+    border-radius: 20px;
+    flex-direction: column;
+    width: 60vw;
+    box-shadow: 1px 1px 4px 1px rgba(0, 0, 0, 0.10); */
+}
+
+#titleEvidencia{
+    font-weight: bold;
+    margin: 25px 0px;
+}
+
+.elementEvidencia{
+    margin-bottom: 10px;
+    display: flex;
+    background-color: #fff;
+    border-radius: 7px;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px 5vw;
+    flex-direction: row;
+    width: 60vw;
+    border: solid 1px #ddd;
+    padding: 15px 5vw;
+}
+
+.evidenciaTxt{
+    font-size: 16;
+    font-weight: bold;
+    color: #5b5a5d;
+}
+
+#evidenciaInput{
+    border: solid 1px #ddd;
+    border-radius: 7px;
+    padding: 3px 5px;
+    width: 30vw;
+    margin-left: 10px;
+    color: #000;
+    font-weight: bold;
+}
+
+#evidenciaFile{
+    margin-left: 2vw;
+}
+
+#elementDesc{
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+#elementDesc textarea{
+    resize: none;
+    border: solid 1px #ddd;
+    border-radius: 7px;
+    padding: 3px 5px;
+    width: 30vw;
+    color: #000;
+    font-weight: bold;
+    width: 100%;
+    margin-top: 10px;
+    height: 150px;
+}
+
+#elementBtn{
+    display: flex;
+    justify-content: center;
+    margin: 30px 0;
+}
+
+#elementBtn input[type="submit"]{
+    background-color: #862628;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    padding: 10px;
+    margin-right: 15px;
+    font-weight: bold;
+    font-size: 16px;
+    width: 120px;
+}
+
+#elementBtn input[type="reset"]{
+    background-color: #3490dc;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    padding: 10px;
+    margin-right: 30px;
+    font-weight: bold;
+    font-size: 16px;
+    width: 120px;
+}
